--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
     "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.3.13",
     "express": "^4.13.4",
+    "lodash": "^4.17.4",
     "react": "^0.14.8",
     "react-dom": "^0.14.7",
     "react-redux": "^5.0.2",
